<resources>
    <string name="app_name">DonggukTon</string>
    <string name="application_terminate">\'뒤로\' 버튼 한 번 더 누르면 종료됩니다.</string>
    <string name="binding_error">에러가 발생했습니다</string>

    <!--  onBoarding  -->
    <string name="onBoarding_des_1">Question + Feed\n“질문”의 답을 “피드”로 기록해 보는\n색다른 경험, 큐피드</string>
    <string name="onBoarding_des_2">설레이는 12월🎄\n25일간의 특별한 여정이\n여러분을 기다리고 있습니다</string>
    <string name="onBoarding_des_3">하루에 하나씩 열리는\n질문과 미션에 답 하면서\n감동과 기억을 기록해 보세요☃️</string>
    <string name="onBoarding_des_4">오직 12/1 ~ 12~7\n단 7일만 입장이 가능 합니다\n지금 바로 참여해 보세요!</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>

    <!--  login  -->
    <string name="sign_up_under_line"><u>회원가입</u></string>
    <string name="login_id_hint">ID</string>
    <string name="login_hint_password">PASSWORD</string>
    <string name="login_success_toast">로그인에 성공했습니다!</string>
    <string name="login_failure_toast">아이디 혹은 비밀번호가 일치하지 않습니다.</string>

    <!--  my page  -->
    <string name="my_page_title">%s의 Q_feed</string>
    <string name="my_page_finished_version_title">%s님의 완성본</string>
    <string name="my_page_friend_finished_version_title">친구 등록/완성본</string>
    <string name="my_info_code">🎄 개별코드: %d</string>
    <string name="my_info_id">🎄 아이디: %s</string>
    <string name="my_info_start_date">🎄 가입일자: %s</string>

    <!--  sign up  -->
    <string name="sign_up_title">큐피드 회원가입</string>
    <string name="sign_up_nickname_title">닉네임 입력</string>
    <string name="sign_up_id_title">아이디 입력</string>
    <string name="sign_up_pw_title">비밀번호 입력</string>
    <string name="sign_up_pw_check_title">비밀번호 확인</string>
    <string name="sign_up_nickname_hint">최대 4자의 한글, 영문만 사용 가능</string>
    <string name="sign_up_id_hint">6~12자의 영문, 숫자만 사용 가능</string>
    <string name="sign_up_password_hint">8자 이상의 문자, 숫자, 특수기호 사용 가능</string>
    <string name="sign_up_id_double_check">중복확인</string>
    <string name="confirm">확인</string>
    <string name="q_feed_instruction">Q_feed는 12월의 25일간 다양한 질문들을 통해 여러분의 감정과 경험을 마주할 수 있는 기회를 제공합니다! 어디서나 언제든, 당신만의 특별한 순간들을 기록하고 공유해보세요.\n\n🔓 질문 카드 : 매일 오후 12시에 새로운 질문이 열립니다. 각 질문에 대한 답변은 48시간 동안 유효하며, 시간이 지나면 해당 문답 카드는 다시 잠깁니다.\n\n💬 답변 수정 불가능 : 한 번 완료한 답변은 수정이 불가능합니다. 신중한 답변을 작성해주세요.\n\n🔍 완성본 공개 : 모든 문답이 정리된 완성본은 마지막 25일자 질문의 유효시간이 지난 후에 공개됩니다.\n\n🔗 친구 공유: 함께할 친구를 추가하여 서로의 문답을 공유해보세요. 공유되는 최종본에서 숨기고 싶은 문답은 답변 작성 시에 비공개 설정을 통해 숨길 수 있습니다.</string>
    <string name="question_num">No.%d</string>
    <string name="name_title">%s의</string>
    <string name="dialog_post_lock">아직 잠겨 있습니다!\n%d일 후에 만나요!</string>
</resources>